--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,6 +41,18 @@
    <title>The Age Technology Scraper</title>
 </head>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <a class="navbar-brand">The Age Technology Scraper</a>
+   <div class="collapse navbar-collapse" id="navbar">
+      <div class="navbar-nav">
+         <a class="nav-item nav-link active" href="/">Home</a>
+         <a class="nav-item nav-link" href="/saved">Saved Articles</a>
+         <a class="btn btn-danger" id="scrape-button">Scrape It!</a>
+         <a class="btn btn-danger" id="delete-button">Delete Unsaved Articles</a>
+      </div>
+   </div>
+</nav>
+
 <body>
    {{{body}}}
 </body>
