fixed relative paths

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,10 +22,10 @@
       crossorigin="anonymous"></script>
 
    {{!-- Reset.css --}}
-   <link rel="stylesheet" href="/Newsflash/public/css/reset.css">
+   <link rel="stylesheet" href="/css/reset.css">
 
    {{!-- Style.css --}}
-   <link rel="stylesheet" href="/Newsflash/public/css/reset.css">
+   <link rel="stylesheet" href="/css/style.css">
 
    {{!-- Font Awesome --}}
    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -36,7 +36,7 @@
       crossorigin="anonymous"></script>
 
    {{!-- App.js --}}
-   <script src="/Newsflash/public/js/app.js"></script>
+   <script src="/js/app.js"></script>
 
    <title>The Age Technology Scraper</title>
 </head>
